Fixed the overflow error

--- a/client/src/App.css
+++ b/client/src/App.css
@@ -16,6 +16,3 @@
     }
 }
 
-html, body{
-    overflow-x: hidden !important;
-}
