--- a/client/src/Pages/HomePage/Home.scss
+++ b/client/src/Pages/HomePage/Home.scss
@@ -49,7 +49,6 @@
 
     img{
         z-index: 1000;
-        max-width: 100%;
     }
 }
 
