--- a/client/src/index.css
+++ b/client/src/index.css
@@ -1,6 +1,6 @@
-body {
+html, body {
     font-family: 'Poppins';
     padding: 0;
     margin: 0;
-    overflow-x: hidden;
+    overflow-x: hidden !important;
 }
